Release 4.3 (minor changes)